nex-gen reproduced in jumbotron and bg applied

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,7 +1,28 @@
-$nav-blue: #21333e;//colore blu della nav preso col color picker
+$woodsmoke: #121117;
+$white: #ffffff;
+$abbey: #505051;
 $silver-sand: #babdbe;
-$smalt-blue: #5c828c;
-$gray-nurse: #e4eae6;
-$ebony-clay: #24343c;
 $blue-lagoon: #038483;
 $fountain-blue: #51bdbc;
+
+$shark: #202427;
+$gray-nurse: #e4eae6;
+$gothic: #6c9b9c;
+$smalt-blue: #5c828c;
+$bazaar: #947474;
+
+$elm: #1a948f;
+$shuttle-gray: #5e6063;
+$atoll: #097a7c;
+$ebony-clay: #24343c;
+$bermura: #7ed5d5;
+
+$nav-blue: #21333e;//colore blu della nav preso col color picker
+$acqua: #029d9d;
+$dark-green: #143230;
+
+
+
+
+
+
