--- a/src/partials/sections/_main-jumbotron.scss
+++ b/src/partials/sections/_main-jumbotron.scss
@@ -1,23 +1,46 @@
-.nav_main {
-    @include center-section;
-    padding: 3rem 0;
-    .nav_main_left {
-        position: relative;
-        .nex {
-            color: $fountain-blue;
-            font-weight: bold;
-            font-size: 25px;
 
+.jumbo {
+    position: relative;
+    width: 100%;
+
+    .jumbo_bg {
+        position: absolute;
+       img {
+           width: 100%;
+       }
+    }
+    .nav_main {
+        @include center-section;
+        padding: 3rem 0;
+        position: relative;
+        .img {
+            position: absolute;
+        }
+        .nav_main_left {
+            position: relative;
+            .nex {
+                color: $fountain-blue;
+                font-weight: bold;
+                font-size: 25px;
+            }
+            .gen {
+                margin-left: 5px;
+                color: $silver-sand;
+                font-weight: bold;
+                font-size: 25px;
+            }
             .nex_bg {
                 position: absolute;
                 background-color: $blue-lagoon;
                 border-radius: 20px 0 0 20px;
-                padding: 0.5rem 0 0.5rem 2rem;
-                opacity: 0.5;
-                width: 500px;
-                height: 100px;
+                opacity: 0.3;
+                width: 90px;
+                height: 50px;
+                left: -35px;
+                top: -5px;
             }
             
         }
     }
+
 }
