--- a/src/app.scss
+++ b/src/app.scss
@@ -2,3 +2,5 @@
 @import "./partials/mixins";
 @import "./partials/sections/header";
 @import "./partials/sections/main-jumbotron";
+@import "./partials/sections/main-jumbotron-navbar";
+@import "./partials/sections/main-card-section";
