--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -7,3 +7,19 @@
     text-transform: uppercase;
     font-weight:600;
 }
+
+/* Buttons */
+@mixin get-in-touch {
+    background-color: $blue-lagoon;
+    color: $gray-nurse;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 1.5rem;
+}
+@mixin read-more {
+    background-color: transparent;
+    color: $gray-nurse;
+    border: 1px solid $blue-lagoon;
+    border-radius: 5px;
+    padding: 0.5rem 1.5rem;
+}
