--- a/src/app.scss
+++ b/src/app.scss
@@ -4,3 +4,4 @@
 @import "./partials/sections/main-jumbotron";
 @import "./partials/sections/main-jumbotron-navbar";
 @import "./partials/sections/main-card-section";
+@import "./partials/sections/main-about-section";
