--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -1,11 +1,34 @@
+/* Common */
 @mixin center-section {
     width: 80%;
     margin: auto;
 }
 
+/* Texts */
 @mixin upper-bold {
     text-transform: uppercase;
     font-weight:600;
+}
+@mixin green-title {
+    font-size: 16px;
+    color: $fountain-blue;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+@mixin section-title {
+    font-size: 50px;
+    font-weight: bold;
+    margin: 3rem 0;
+}
+@mixin section-title-first {
+    background-color: $light-blue;
+    color: $blue-lagoon;
+    padding: 0 0.8rem;
+    border-radius: 5px;
+}
+@mixin section-paragraph {
+    color: $silver-sand;
+    font-size: 19px;
 }
 
 /* Buttons */
