--- a/src/partials/sections/_main-card-section.scss
+++ b/src/partials/sections/_main-card-section.scss
@@ -24,8 +24,7 @@
                 margin: 1.5rem 0;
             }
             .card_p {
-                color: $silver-sand;
-                font-size: 19px;
+                @include section-paragraph;
             }            
         }
     }
@@ -36,6 +35,7 @@
         left: calc(50% - 100px);
         padding: 1rem;
         width: 230px;
+        z-index: 1;
         i {
             font-size: 12px;
             margin: 0 0.3rem;
