--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -15,6 +15,11 @@
     text-transform: uppercase;
     font-weight: bold;
 }
+@mixin ebony-title {
+    color: $ebony-clay;
+    font-size: 30px;
+    font-weight: bold;
+}
 @mixin section-title {
     font-size: 50px;
     font-weight: bold;
@@ -45,4 +50,22 @@
     border: 1px solid $blue-lagoon;
     border-radius: 5px;
     padding: 0.5rem 1.5rem;
+}
+
+/* Decorations */
+@mixin circles {
+    .circles {
+        position: absolute;
+        color: $blue-lagoon;
+        bottom: -61px;
+        left: calc(50% - 100px);
+        padding: 1rem;
+        width: 230px;
+        z-index: 1;
+        i {
+            font-size: 12px;
+            margin: 0 0.3rem;
+            opacity: 0.4;
+        }
+    }
 }
