action section complete

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,3 +5,4 @@
 @import "./partials/sections/main-jumbotron-navbar";
 @import "./partials/sections/main-card-section";
 @import "./partials/sections/main-about-section";
+@import "./partials/sections/main-actions-section"
