--- a/src/partials/sections/_main-jumbotron-navbar.scss
+++ b/src/partials/sections/_main-jumbotron-navbar.scss
@@ -34,13 +34,7 @@
         @include upper-bold;
         font-size: 22px;
         color: $silver-sand;
-        .jumbo_links {
-            display: inline-block;
-            a {
-                color: $silver-sand;
-                margin-left: 2rem;
-            }
-        }
+        @include links;
         i {
             margin: 0 2rem;
         }
