process section complete

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,10 @@
 @import "./partials/variables";
 @import "./partials/mixins";
+@import "./partials/commons";
 @import "./partials/sections/header";
 @import "./partials/sections/main-jumbotron";
 @import "./partials/sections/main-jumbotron-navbar";
 @import "./partials/sections/main-card-section";
 @import "./partials/sections/main-about-section";
-@import "./partials/sections/main-actions-section"
+@import "./partials/sections/main-actions-section";
+@import "./partials/sections/main-process-section";
