--- a/src/partials/sections/_main-card-section.scss
+++ b/src/partials/sections/_main-card-section.scss
@@ -12,11 +12,9 @@
             padding: 3rem;
             border-radius: 10px;
             i {
-                color: $blue-lagoon;
-                background-color: $light-blue;
+                @include rounded;
                 font-size: 35px;
                 padding: 1.2rem 1rem;
-                border-radius: 50px;
             }
             .card_title {
                 @include ebony-title;
