feedback section complete

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,3 +8,4 @@
 @import "./partials/sections/main-about-section";
 @import "./partials/sections/main-actions-section";
 @import "./partials/sections/main-process-section";
+@import "./partials/sections/main-feedback-section";
