--- a/src/app.scss
+++ b/src/app.scss
@@ -9,3 +9,4 @@
 @import "./partials/sections/main-actions-section";
 @import "./partials/sections/main-process-section";
 @import "./partials/sections/main-feedback-section";
+@import "./partials/sections/footer";
