--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -92,7 +92,11 @@
 }
 
 @mixin rounded {
-    color: $blue-lagoon;
-    background-color: $light-blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50px;
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
 }
