--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -4,6 +4,7 @@ footer {
 
     .footer_container {
         @include center-section;
+        display: flex;
 
         .footer_left {
             width: 60%;
@@ -30,12 +31,52 @@ footer {
                     textarea {
                         margin: 0.4rem;
                     }
+                    .form-control {
+                        background-color: $shark;
+                        border: none;
+                    }
+                }
+                button {
+                    @include get-in-touch;
+                    @include upper-bold;
                 }
             }
         }
         .footer_right {
             width: 40%;
-    
+            display: flex;
+            flex-direction: column;
+            padding: 0 5rem;
+            h5 {
+                @include white-title;
+                margin-bottom: 2rem;
+            }
+            p {
+                color: $silver-sand;
+                margin-bottom: 2rem;
+            }
+            .footer_contacts {
+                color: $blue-lagoon;
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 2rem;
+                .contact {
+                    display: flex;
+                    align-items: center;
+                    .contact_icon {
+                        @include rounded;
+                        background-color: $dark-green;
+                        margin: 0 1rem 1rem 0;
+                    }
+                }
+                
+                
+            }
+            button {
+                @include read-more;
+                @include upper-bold;
+                width: 180px;
+            }
         }
     }
     
