nex gen in header floats correctly

--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -32,7 +32,7 @@ footer {
                         margin: 0.4rem;
                     }
                     .form-control {
-                        background-color: $shark;
+                        background-color: $dark-grey;
                         border: none;
                     }
                 }
