--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -20,6 +20,7 @@ $bermura: #7ed5d5;
 $nav-blue: #21333e;//colore blu della nav preso col color picker
 $dark-green: #143230;
 $light-blue: #daeced;
+$dark-grey: #1d1d23;
 
 
 
