sistemati link, dato bg al primoin sezione action

--- a/src/partials/sections/_main-actions-section.scss
+++ b/src/partials/sections/_main-actions-section.scss
@@ -13,7 +13,14 @@
                 @include section-title-dark;
             }
         }
-        @include links;
+        .nav_links {
+            @include links;
+            :first-child {
+                @include section-title-dark;
+                padding: 0.5rem;
+            }
+            
+        }
         @include upper-bold;
     }
     
