--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -27,9 +27,10 @@ footer {
             }
             .footer_left_bottom {
                 .form-row {
-                    margin: 1rem 0;
-                    textarea {
-                        margin: 0.4rem;
+                     margin: 1rem 0;
+                    .col {
+                        margin: 0;
+                        padding: 0;
                     }
                     .form-control {
                         background-color: $dark-grey;
@@ -39,6 +40,7 @@ footer {
                 button {
                     @include get-in-touch;
                     @include upper-bold;
+                    margin-top: 1rem;
                 }
             }
         }
