aggiustati i margini del form

--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -32,6 +32,9 @@ footer {
                         margin: 0;
                         padding: 0;
                     }
+                    .first {
+                        margin-right: 1rem;
+                    }
                     .form-control {
                         background-color: $dark-grey;
                         border: none;
