sistemato il padding dell'header

--- a/src/partials/sections/_header.scss
+++ b/src/partials/sections/_header.scss
@@ -4,7 +4,7 @@ header {
 
     .info_bar {
         @include center-section;
-        padding: 1.5rem;
+        padding: 1.5rem 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
