Aggiunti commenti HTML, JS e alcune parts di SCSS

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,3 +1,4 @@
+//Palette fornita
 $woodsmoke: #121117;
 $white: #ffffff;
 $abbey: #505051;
@@ -17,11 +18,12 @@ $atoll: #097a7c;
 $ebony-clay: #24343c;
 $bermura: #7ed5d5;
 
-$nav-blue: #21333e;//colore blu della nav preso col color picker
+//Colori presi col color-picker
+$nav-blue: #21333e;
 $dark-green: #143230;
 $light-blue: #daeced;
 $dark-grey: #1d1d23;
-
+$dark-bottom: #0d0d11;
 
 
 
