rivisti un paio di colori e modificato dark-green

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -20,7 +20,8 @@ $bermura: #7ed5d5;
 
 //Colori presi col color-picker
 $nav-blue: #21333e;
-$dark-green: #143230;
+$light-green: #cce3de;
+$dark-green: #0e272d;
 $light-blue: #daeced;
 $dark-grey: #1d1d23;
 $dark-bottom: #0d0d11;
