--- a/src/partials/sections/_main-about-section.scss
+++ b/src/partials/sections/_main-about-section.scss
@@ -54,11 +54,11 @@
         }
  
     .image {
-        background-image: url('/dist/img/about-5.jpg');
-        background-size: fill;
-        background-repeat: no-repeat;
-        width: 50%;
-        
+        width: 50%; 
+        img {
+            height: 100%;
+            width: 100%;
+        }
     }
     @include circles;    
 }
