ridotto margine inferiore del h1 del footer

--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -17,6 +17,7 @@ footer {
                 h1 {
                     @include white-title;
                     @include section-title;
+                    margin-bottom: 2rem;
                     span {
                         @include section-title-dark;
                     }
