schiarito icone virgolette in feedback section

--- a/src/partials/sections/_main-feedback-section.scss
+++ b/src/partials/sections/_main-feedback-section.scss
@@ -45,6 +45,7 @@
                 }
                 i {
                     @include section-paragraph;
+                    color: lightgray;
                     position: absolute;
                     font-size: 23px;
                     right: 1.5rem;
