--- a/src/partials/sections/_footer.scss
+++ b/src/partials/sections/_footer.scss
@@ -17,7 +17,7 @@ footer {
                 h1 {
                     @include white-title;
                     @include section-title;
-                    margin-bottom: 2rem;
+                    margin: 2rem 0;
                     span {
                         @include section-title-dark;
                     }
@@ -55,16 +55,16 @@ footer {
             padding: 0 5rem;
             h5 {
                 @include white-title;
-                margin-bottom: 2rem;
             }
             p {
                 @include footer-paragraph;
+                margin: 1rem 0;
             }
             .footer_contacts {
                 color: $blue-lagoon;
                 display: flex;
                 flex-direction: column;
-                margin-bottom: 1rem;
+                margin: 1rem 0;
                 .contact {
                     display: flex;
                     align-items: center;
