--- a/src/partials/sections/_main-about-section.scss
+++ b/src/partials/sections/_main-about-section.scss
@@ -14,6 +14,7 @@
                     @include section-title-first
                 }
                 color: $nav-blue;
+                margin: 2rem 0;
             }
             p {
                 @include section-paragraph;
@@ -38,7 +39,7 @@
             }
             .buttons {
                 display: flex;
-                margin: 4rem 0 10rem;
+                margin: 3rem 0 10rem;
                 :first-child {
                     @include get-in-touch;
                     @include upper-bold;
