--- a/src/partials/sections/_main-process-section.scss
+++ b/src/partials/sections/_main-process-section.scss
@@ -13,6 +13,7 @@
         h1 {
             @include ebony-title;
             @include section-title;
+            margin: 2rem 0;
             span {
                 @include section-title-first;
             }
