--- a/src/partials/sections/_main-jumbotron-navbar.scss
+++ b/src/partials/sections/_main-jumbotron-navbar.scss
@@ -42,6 +42,7 @@
         }
         i {
             margin: 0 2rem;
+            font-size: 22px;
         } 
         button {
             @include upper-bold;
